<resources>
    <string name="app_name">Calculator</string>

    <string name="digit_null">0</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>

    <string name="sign_plus">+</string>
    <string name="sign_minus">−</string>
    <string name="sign_multiplication">×</string>
    <string name="sign_division">÷</string>
    <string name="sign_equal">=</string>
    <string name="sign_cancel">C</string>
</resources>
